# magiclens

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  deploy-mvp.sh  docker-compose.yml  e2b.toml  eslint.config.mjs  flow.json  hetzner.Dockerfile  hetzner.toml  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  test-integration.js  tsconfig.json  vercel.json  verify-api.sh  version.json
.husky/: pre-commit
.qoder/: settings.json
app/: .env.example  .gitignore  README.md  index.html  next.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
blockchain/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
contracts-cadence/: ARAssetNFT.cdc  ARAssetNFT_Complex.cdc  CollaborationHub.cdc  (+2 more)
services/: .env.example  Dockerfile  README.md  alembic.ini  main_prod.py  pyproject.toml
services/alembic/: README.md  env.py
services/alembic/versions/: 001_initial_schema.py  2d483713e6c1_add_pose_analysis_tables.py
services/api/: bootstrap.py  flow_routes.py  models.py  routes.py  utils.py  websocket_routes.py
services/core/: access.py  ai_analysis_service.py  artist_assets.py  asset_service.py  auth.py  collaboration_service.py  collaborations.py  computer_vision.py  crossvm_service.py  database.py  ffmpeg_service.py  flow_service.py  gif_service.py  health.py  leaderboard_service.py  media.py  metrics.py  overlays.py  pexels_service.py  pose_cache.py  pose_processing_queue.py  recommendation_engine.py  render_queue.py  render_service.py  renders.py  sentry_config.py  table.py  user.py  user_profiles.py  user_service.py  video_service.py  videos.py  websocket_service.py
services/docs/: computer_vision.md  computer_vision_integration_analysis.md
services/examples/: computer_vision_usage.py
services/tests/: test_auth.py  test_collaboration_requests.py  test_computer_vision.py  test_ffmpeg_service.py  test_media.py  test_render_queue.py
(+254 files in other folders)
